# oparl-mcp-server

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CICD_PLAN.md  CI_CD_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_BUILD_FIX_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  GITHUB_ACTIONS_COMPLIANCE_UPDATE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_FIX_SUMMARY.md  JEKYLL_DESIGN_UPDATE_SUMMARY.md  JEKYLL_DOCUMENTATION_REFACTOR_SUMMARY.md  PRE_COMMIT_FIX_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_SUMMARY.md  README.md  README_UPDATE_SUMMARY.md  SECURITY_SCANNING_PERMISSIONS_FIX.md  TEST_WORKFLOW_FIX_SUMMARY.md  coverage.xml  oparl_openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration.py  test_integration_podman.sh  test_setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  docker.yml  docs-jekyll.yml  docs.yml  integration.yml  quality.yml  release.yml  security.yml  test-simple.yml  tests.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: Gemfile  README.md  _config.yml  index.md
docs/_includes/: navigation.html
docs/_layouts/: page.html
docs/de/: mkdocs.yml
docs/en/: mkdocs.yml
examples/: advanced_usage.py  basic_usage.py  mcp_usage.py
junit/: test-results.xml
scripts/: setup-github-pages.sh  setup-wiki.py
src/oparl_mcp/: __init__.py  __main__.py  auth.py  config.py  server.py  utils.py
src/oparl_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_config.py  test_server.py
(+64 files in other folders)
